--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react-dom": "18.2.0",
     "typescript": "5.1.6",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.8"
   }
 }
