--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.7.2",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
