--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "cypress": "npx cypress open",
     "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start -p 8080",
@@ -15,6 +16,7 @@
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "axios": "^1.7.2",
+    "cypress": "^13.11.0",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
